# fast-ai-cold-calling

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt  setup.py  template.py
alembic/: env.py
alembic/versions/: 65d2298e53c7_initial_schema.py
src/: config.py  db.py  main.py  redis_client.py
src/constants/: agent_constants.py  common.py
src/core/: barge_in.py  call_session.py  interfaces.py  pipeline.py  session_store.py
src/models/: __init__.py  account.py  base.py  campaign.py  campaign_model.py  user.py  voice.py  voice_model.py
src/providers/: registry.py
src/providers/llm/: openai_llm.py
src/providers/stt/: deepgram_stt.py
src/providers/tts/: elevenlabs_tts.py
src/routers/: auth.py  calls.py  campaign.py  campaigns.py  user.py  voice_call.py  voices.py
src/schemas/: auth.py  calls.py  campaign.py  voice.py
src/services/: auth_service.py  call_service.py  campaign_dialer.py  campaign_service.py  voice_service.py
src/signals/: campaign_signals.py
src/utils/: ai_engine.py  audioop_compat.py  call_agent.py  db.py  file_validations.py  helpers.py  phone.py  security.py  twilio_signature.py
static/: sample.xlsx
tests/: conftest.py
tests/integration/: test_auth_api.py  test_campaign_dialer.py
tests/manual/: generate_fixture.py  simulate_call.py
tests/unit/: fakes.py  test_phone.py  test_pipeline.py  test_security.py  test_sentence_chunk.py
