[project]
name = "fast-ai-cold-calling"
version = "0.1.0"
description = "AI voice cold-calling agent: Twilio + Deepgram STT + OpenAI + ElevenLabs TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "redis>=5.0.0",
    "twilio>=9.3.0",
    "openai>=1.50.0",
    "deepgram-sdk>=3.7.0",
    "websockets>=13.0",
    "phonenumbers>=8.13.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
